# mercury-graph

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  MANIFEST.in  README.md  config.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_docker.sh  test.sh
docker/: Dockerfile  README.md  build.sh  start_jupyter.sh
docs/: index.md
docs/reference/: core.md  embeddings.md  ml.md  viz.md
docs/stylesheets/: extra.css
mercury/: version.py
mercury/graph/: __init__.py  create_tutorials.py
mercury/graph/core/: __init__.py  _njit.py  base.py  graph.py  spark_interface.py
mercury/graph/embeddings/: __init__.py  embeddings.py  graphembeddings.py  spark_node2vec.py
mercury/graph/graphml/: base.py  (+7 more)
tests/: conftest.py
tests/test_graphml/: test_louvain.py  test_spectral.py  test_transition.py
tutorials/: mercury-graph-tutorial-banksim-nospark.ipynb  mercury-graph-tutorial-banksim.ipynb  mercury-graph-tutorial-fifa-nospark.ipynb  mercury-graph-tutorial-fifa.ipynb  moebius_demo.ipynb
tutorials/data/: chamberi_aristas.csv  chamberi_nodos.csv  fifa17_edges.csv  fifa17_nodes.csv  un_comtrade_2016_names.csv  un_comtrade_2016_sample.csv
unit_tests/: conftest.py  test_core_graph.py  test_core_spark_interface.py  test_embeddings_embeddings.py  test_embeddings_graphembeddings.py  test_graphml_louvain.py  test_graphml_spark_node2vec.py  test_graphml_spark_randomwalker.py  test_graphml_spark_spreadactivation.py  test_graphml_spectral.py  test_graphml_transition.py  test_ml_louvain.py  test_ml_spark_randomwalker.py  test_ml_spark_spreadactivation.py  test_ml_spectral.py  test_ml_transition.py  test_viz_moebius.py
(+15 files in other folders)
